bpo-33391: Fix refleak in set_symmetric_difference (GH-6670)